automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,11 +164,11 @@ a:visited {
 }
 
 #reginald-carter-cover {
-  background-image: url("https://imgur.com/Fwzh3yD");
+  background-image: url("https://imgur.com/Fwzh3yD.jpg");
 }
 
 #reginald-carter-card {
-  background-image: url("https://imgur.com/cy2l5xo");
+  background-image: url("https://imgur.com/cy2l5xo.jpg");
 }
 
 .view-profile-div {
